@@ -1,5 +1,14 @@
 2010-09-23  Kinuko Yasuda  <kinuko@chromium.org>
 
+        Unreviewed, another attempt to fix build.  The code didn't have proper if-defs.
+
+        * src/WebWorkerBase.cpp:
+        (WebKit::WebWorkerBase::openFileSystem):
+        * src/WebWorkerBase.h:
+        * src/WorkerFileSystemCallbacksBridge.h:
+
+2010-09-23  Kinuko Yasuda  <kinuko@chromium.org>
+
         Unreviewed; build fix attempt.
 
         * src/WebWorkerBase.cpp:
